--- a/eureka-server-service-discovery-dev.yml
+++ b/eureka-server-service-discovery-dev.yml
@@ -1,5 +1,12 @@
 server:
   port: 8083
+
+spring:
+  security:
+    user:
+      name: geniusconfig
+      password: geniusconfig  
+
 eureka:
   client:
     serviceUrl:
