--- a/clearance-country-identifier-dev.properties
+++ b/clearance-country-identifier-dev.properties
@@ -1,3 +1,6 @@
-server.port=8501
+spring.application.name=clearance-country-identifier
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
+server.port=0
 module.name=DCC
 module.desc=Clearance Country Identification module for both Imports and Exports
