--- a/clearance-country-identifier-dev.properties
+++ b/clearance-country-identifier-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=clearance-country-identifier
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8083/eureka}
+eureka.client.serviceUrl.defaultZone=http://localhost:8083/eureka
 eureka.instance.preferIpAddress=true
 server.port=0
 module.name=DCC
