--- a/eureka-server-service-discovery-dev.yml
+++ b/eureka-server-service-discovery-dev.yml
@@ -9,5 +9,7 @@ spring:
 
 eureka:
   client:
+   serviceUrl:
+    defaultZone: http://localhost:8083/eureka
     registerWithEureka: false
     fetchRegistry: false
